# yolact

./: .gitignore  README.md  eval.py  pyproject.toml  setup.py  train.py  yolact.py
data/: coco.py
src/yolact/: backbone.py  config.py  yolact.py
src/yolact/data/: __init__.py  coco.py  config.py
src/yolact/data/configs/: backbones.py  coco_2014.py  coco_base.py  dataset_base.py  datasets.py  helpers.py  transforms.py  yolact_base.py  yolact_variants.py  yolactpp_variants.py
src/yolact/layers/: box_utils.py  interpolate.py  output_utils.py
src/yolact/layers/functions/: detection.py
src/yolact/layers/modules/: multibox_loss.py
src/yolact/utils/: augmentations.py  evaluation.py  functions.py
