[tool.poetry]
name = "yolact"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cython = "^0.29.17"
pillow = "<7"
torch = "^1.5.0"
torchvision = "^0.6.0"
opencv-python = "^4.2.0"
pycocotools = "^2.0.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.2.1"
